[package]
name = "glade-bindgen"
version = "0.1.0"
authors = ["djdisodo <djdisodo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
xml-rs = "0.8"
enquote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]