[package]
name = "glade-bindgen"
version = "1.1.0"
authors = ["djdisodo <djdisodo@gmail.com>"]
license = "MIT"
description = "library to generate gtk glade bind"
repository = "https://github.com/djdisodo/glade-bindgen"
readme = "README.md"
edition = "2018"
keywords = ["gtk", "glade", "gtk-rs", "gui", "bind"]
categories = ["development-tools::build-utils", "gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
lazy_static = "1.4"
quote = "1.0"
xml-rs = "0.8"
convert_case = "0.4"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]
